OAI-5G/Deployment/my5grantester.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oai-my5grantester
  namespace: oai-cn5g
  labels:
    app: oai-my5grantester
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oai-my5grantester
  template:
    metadata:
      labels:
        app: oai-my5grantester
        epc-mode: oai-my5grantester
        prometheus: oai-monitor
        version: 2.6.4
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: metallica
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: whitesnake
      containers:
        - name: oai-my5grantester
          image: carlosmenin/my5grantester:latest
          #command: ["sleep", "infinity"]
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true
