OAI-5G/Deployment/amf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oai-amf
  namespace: oai-cn5g
  labels:
    app: amf
spec:
  selector:
    matchLabels:
      app: amf
  template:
    metadata:
      labels:
        app: amf
    spec:
      nodeSelector:
        nodetype: server
      containers:
        - name: oai-amf
          image: oaisoftwarealliance/oai-amf:v2.0.1
          command: ["/openair-amf/bin/oai_amf", "-c", "/configuracoes/amfConfig.yaml", "-o"]
          ports:
            - name: sbi
              containerPort: 80
              protocol: TCP
            - name: n2
              containerPort: 38412
              protocol: SCTP
          volumeMounts:
            - name: config-volume
              mountPath: /configuracoes
      volumes:
        - name: config-volume
          configMap:
            name: amf-config
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name:  oai-amf
  namespace: oai-cn5g
spec:
  selector:
    app: amf
  ports:
    - name: sbi
      protocol: TCP
      port: 80
      targetPort: 80
    - name: n2
      protocol: SCTP
      port: 38412
      targetPort: 38412
