OAI-5G/Deployment/ausf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oai-ausf
  namespace: oai-cn5g
  labels:
    app: oai-ausf
spec:
  selector:
    matchLabels:
      app: oai-ausf
  template:
    metadata:
      labels:
        app: oai-ausf
        epc-mode: oai-ausf
        prometheus: oai-monitor
        version: 2.6.4
    spec:
      nodeSelector:
        nodetype: server
      containers:
        - name: oai-ausf
          image: oaisoftwarealliance/oai-ausf:v2.0.1
          command: ["/openair-ausf/bin/oai_ausf", "-c" , "/configuracoes/ausfConfig.yaml", "-o"]
          ports:
            - name: http2-80
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /configuracoes
      volumes:
        - name: config-volume
          configMap:
            name: ausf-config
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name:  oai-ausf
  namespace: oai-cn5g
spec:
  selector:
    app: oai-ausf
  ports:
    - name: http2-80
      protocol: TCP
      port: 80
      targetPort: 80
