OAI-5G/Deployment/mysql.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql
  namespace: oai-cn5g
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: db-init
          configMap:
            name: mysql-config
      nodeSelector:
        nodetype: server
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: db-init
              mountPath: /docker-entrypoint-initdb.d
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: oai-cn5g
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
