OAI-5G/Deployment/nrf.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: oai-nrf
  namespace: oai-cn5g
  labels:
    app: nrf
spec:
  selector:
    matchLabels:
      app: nrf
  template:
    metadata:
      labels:
        app: nrf
    spec:
      nodeSelector:
        nodetype: server
      containers:
        - name: oai-nrf
          image: oaisoftwarealliance/oai-nrf:latest
          #command: ["./nrf", "-c" ,"/free5gc/config/nrfConfig.yaml"]
          ports:
            - name: http1
              containerPort: 80
              protocol: TCP
            - name: http2
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nrf
  namespace: oai-cn5g
spec:
  selector:
    app: nrf
  ports:
    - name: http1
      protocol: TCP
      port: 80
      targetPort: 80
    - name: http2
      protocol: TCP
      port: 8080
      targetPort: 8080
