OAI-5G/Deployment/smf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oai-smf
  namespace: oai-cn5g
  labels:
    app: smf
spec:
  selector:
    matchLabels:
      app: smf
  template:
    metadata:
      labels:
        app: smf
    spec:
      nodeSelector:
        nodetype: server
      containers:
        - name: oai-smf
          image: oaisoftwarealliance/oai-smf:v2.0.1
          command: ["/openair-smf/bin/oai_smf", "-c", "/configuracoes/smfConfig.yaml", "-o"]
          ports:
            - name: sbi
              containerPort: 80
              protocol: TCP
            - name: n4
              containerPort: 8805
              protocol: UDP
          volumeMounts:
            - name: config-volume
              mountPath: /configuracoes
      volumes:
        - name: config-volume
          configMap:
            name: smf-config
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name:  oai-smf
  namespace: oai-cn5g
spec:
  selector:
    app: smf
  ports:
    - name: sbi
      protocol: TCP
      port: 80
      targetPort: 80
    - name: n4
      protocol: UDP
      port: 8805
      targetPort: 8805
