OAI-5G/Deployment/udm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oai-udm
  namespace: oai-cn5g
  labels:
    app: udm
spec:
  selector:
    matchLabels:
      app: udm
  template:
    metadata:
      labels:
        app: udm
    spec:
      nodeSelector:
        nodetype: server
      containers:
        - name: oai-udm
          image: oaisoftwarealliance/oai-udm:v2.0.1
          command: ["/openair-udm/bin/oai_udm", "-c" , "/configuracoes/udmConfig.yaml", "-o"]
          ports:
            - name: sbi
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /configuracoes
      volumes:
        - name: config-volume
          configMap:
            name: udm-config
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name:  oai-udm
  namespace: oai-cn5g
spec:
  selector:
    app: udm
  ports:
    - name: sbi
      protocol: TCP
      port: 80
      targetPort: 80
