OAI-5G/Deployment/udr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oai-udr
  namespace: oai-cn5g
  labels:
    app: udr
spec:
  selector:
    matchLabels:
      app: udr
  template:
    metadata:
      labels:
        app: udr
    spec:
      nodeSelector:
        nodetype: server
      containers:
        - name: oai-udr
          image: oaisoftwarealliance/oai-udr:v1.5.1
          ports:
            - name: http1
              containerPort: 80
              protocol: TCP
            - name: http2
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: udr
  namespace: oai-cn5g
spec:
  selector:
    app: udr
  ports:
    - name: http1
      protocol: TCP
      port: 80
      targetPort: 80
    - name: http2
      protocol: TCP
      port: 8080
      targetPort: 8080
