OAI-5G/Deployment/upf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oai-upf
  namespace: oai-cn5g
  labels:
    app: oai-upf
spec:
  selector:
    matchLabels:
      app: oai-upf
  template:
    metadata:
      labels:
        app: oai-upf
        epc-mode: oai-upf
        prometheus: oai-monitor
        version: 2.6.4
    spec:
      hostname: upf-pod
      nodeSelector:
        nodetype: server
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: whitesnake
      containers:
        - name: oai-upf
          image: oaisoftwarealliance/oai-upf:v2.0.1
          command: ["bash","-c","/oaicn5g/script/upf-iptables.sh"]
          ports:
            - name: http2-80
              containerPort: 80
              protocol: TCP
            - name: udp-2152
              containerPort: 2152
              protocol: UDP
            - name: udp-8805
              containerPort: 8805
              protocol: UDP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_ADMIN
            privileged: true
          volumeMounts:
            - name: config-volume
              mountPath: /configuracoes
            - name: "dev-net-tun"
              mountPath: "/dev/net/tun"
            - name: iptables-script
              mountPath: /oaicn5g/script
      volumes:
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
        - name: config-volume
          configMap:
            name: upf-config
            defaultMode: 0777
        - name: iptables-script
          configMap:
            name: upf-iptables
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name:  oai-upf
  namespace: oai-cn5g
spec:
  selector:
    app: oai-upf
  ports:
    - name: http2-80
      protocol: TCP
      port: 80
      targetPort: 80
    - name: udp-2152
      protocol: UDP
      port: 2152
      targetPort: 2152
    - name: udp-8805
      protocol: UDP
      port: 8805
      targetPort: 8805
---
  apiVersion: v1
  kind: ConfigMap
  metadata:
    name: upf-config
    namespace: oai-cn5g
  data:
    upfConfig.yaml: |
      log_level:
        general: debug

      # If you enable registration, the other NFs will use the NRF discovery mechanism
      register_nf:
        general: yes

      http_version: 2

      ############## SBI Interfaces
      ### Each NF takes its local SBI interfaces and remote interfaces from here, unless it gets them using NRF discovery mechanisms
      nfs:
        amf:
          host: oai-amf
          sbi:
            port: 80
            api_version: v1
            interface_name: eth0
          n2:
            interface_name: eth0
            port: 38412
        smf:
          host: oai-smf
          sbi:
            port: 80
            api_version: v1
            interface_name: eth0
          n4:
            interface_name: eth0
            port: 8805
        upf:
          host: oai-upf
          sbi:
            port: 80
            api_version: v1
            interface_name: eth0
          n3:
            interface_name: eth0
            port: 2152
          n4:
            interface_name: eth0
            port: 8805
          n6:
            interface_name: eth0
          n9:
            interface_name: eth0
            port: 2152
        udm:
          host: oai-udm
          sbi:
            port: 80
            api_version: v1
            interface_name: eth0
        udr:
          host: oai-udr
          sbi:
            port: 80
            api_version: v1
            interface_name: eth0
        ausf:
          host: oai-ausf
          sbi:
            port: 80
            api_version: v1
            interface_name: eth0
        nrf:
          host: oai-nrf
          sbi:
            port: 80
            api_version: v1
            interface_name: eth0

      #### Common for UDR and AMF
      database:
        host: mysql
        user: test
        type: mysql
        password: test
        database_name: oai_db
        generate_random: true
        connection_timeout: 300 # seconds

      ## general single_nssai configuration
      ## Defines YAML anchors, which are reused in the config file
      snssais:
        - &embb_slice1
          sst: 1
        - &embb_slice2
          sst: 1
          sd: 000001 # in hex
        - &custom_slice
          sst: 222
          sd: 00007B # in hex

      ############## NF-specific configuration
      amf:
        amf_name: "OAI-AMF"
        # This really depends on if we want to keep the "mini" version or not
        support_features_options:
          enable_simple_scenario: no # "no" by default with the normal deployment scenarios with AMF/SMF/UPF/AUSF/UDM/UDR/NRF.
                                    # set it to "yes" to use with the minimalist deployment scenario (including only AMF/SMF/UPF) by using the internal AUSF/UDM implemented inside AMF.
                                    # There's no NRF in this scenario, SMF info is taken from "nfs" section.
          enable_nssf: no
          enable_smf_selection: yes
        relative_capacity: 30
        statistics_timer_interval: 20  # in seconds
        emergency_support: false
        served_guami_list:
          - mcc: 208
            mnc: 95
            amf_region_id: 01
            amf_set_id: 001
            amf_pointer: 01
          - mcc: 001
            mnc: 01
            amf_region_id: 01
            amf_set_id: 001
            amf_pointer: 01
        plmn_support_list:
          - mcc: 208
            mnc: 95
            tac: 0xa000
            nssai:
              - *embb_slice1
              - *embb_slice2
              - *custom_slice
        supported_integrity_algorithms:
          - "NIA0"
          - "NIA1"
          - "NIA2"
        supported_encryption_algorithms:
          - "NEA0"
          - "NEA1"
          - "NEA2"
      smf:
        ue_mtu: 1500
        support_features:
          use_local_subscription_info: yes # Use infos from local_subscription_info or from UDM
          use_local_pcc_rules: yes # Use infos from local_pcc_rules or from PCF
        # we resolve from NRF, this is just to configure usage_reporting
        upfs:
          - host: oai-upf
            config:
              enable_usage_reporting: no
        ue_dns:
          primary_ipv4: "172.21.3.100"
          primary_ipv6: "2001:4860:4860::8888"
          secondary_ipv4: "8.8.8.8"
          secondary_ipv6: "2001:4860:4860::8888"
        ims:
          pcscf_ipv4: "127.0.0.1"
          pcscf_ipv6: "fe80::7915:f408:1787:db8b"
        # the DNN you configure here should be configured in "dnns"
        # follows the SmfInfo datatype from 3GPP TS 29.510
        smf_info:
          sNssaiSmfInfoList:
            - sNssai: *embb_slice1
              dnnSmfInfoList:
                - dnn: "oai"
            - sNssai: *embb_slice2
              dnnSmfInfoList:
                - dnn: "oai.ipv4"
            - sNssai: *custom_slice
              dnnSmfInfoList:
                - dnn: "default"
        local_subscription_infos:
          - single_nssai: *embb_slice1
            dnn: "oai"
            qos_profile:
              5qi: 9
              session_ambr_ul: "200Mbps"
              session_ambr_dl: "400Mbps"
          - single_nssai: *embb_slice2
            dnn: "oai.ipv4"
            qos_profile:
              5qi: 9
              session_ambr_ul: "100Mbps"
              session_ambr_dl: "200Mbps"
          - single_nssai: *custom_slice
            dnn: "default"
            qos_profile:
              5qi: 9
              session_ambr_ul: "50Mbps"
              session_ambr_dl: "100Mbps"

      upf:
        support_features:
          enable_bpf_datapath: no    # If "on": BPF is used as datapath else simpleswitch is used, DEFAULT= off
          enable_snat: yes           # If "on": Source natting is done for UE, DEFAULT= off
        remote_n6_gw: 127.0.0.1      # Dummy host since simple-switch does not use N6 GW
        smfs:
          - host: oai-smf            # To be used for PFCP association in case of no-NRF
        upf_info:
          sNssaiUpfInfoList:
            - sNssai: *embb_slice1
              dnnUpfInfoList:
                - dnn: "oai"
            - sNssai: *embb_slice2
              dnnUpfInfoList:
                - dnn: "oai.ipv4"
            - sNssai: *custom_slice
              dnnUpfInfoList:
                - dnn: "default"

      ## DNN configuration
      dnns:
        - dnn: "oai"
          pdu_session_type: "IPV4"
          ipv4_subnet: "12.1.1.128/25"
        - dnn: "oai.ipv4"
          pdu_session_type: "IPV4"
          ipv4_subnet: "12.1.1.64/26"
        - dnn: "default"
          pdu_session_type: "IPV4"
          ipv4_subnet: "12.1.1.0/26"
        - dnn: "ims"
          pdu_session_type: "IPV4V6"
          ipv4_subnet: "14.1.1.2/24"
